feat: update index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -150,7 +150,9 @@
                             <tr>
                                 <td class="table-secondary fw-bold align-middle">Swagger</td>
                                 <td>Essa opção de menu irá direcionar à página do Swagger / OpenAPI que possui a
-                                    documentação dos endpoints API REST
+                                    documentação dos endpoints API REST<br>
+                                    Utilize a chave a seguir para autenticar com apiKey no Swagger:
+                                    <span th:text="${apiKey}">apiKey</span>
                                 </td>
                             </tr>
                             </tbody>
