feat: update index page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,8 +21,8 @@
 
                     <hr>
                     <p>
-                        Esse sistema foi criado exclusivamente para a entrega do trabalho semestral da faculdade
-                        UNIFRAN / Cruzeiro do Sul para o segundo semestre de 2024.
+                        Este aplicativo foi criado através da oportunidade do desafio do trabalho semestral da faculdade
+                        UNIFRAN / Cruzeiro do Sul, Projeto Integrador Transdisciplinar, do segundo semestre de 2024.
                         Todo o conteúdo é fictício.
                         No rodapé da página tem o link para o repositório do projeto no GitHub (Repo GitHub) com mais
                         detalhes,
