feat: fix update valorFinal field in Produto registration

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -31,6 +31,8 @@
 <script type="text/javascript" th:src="@{/assets/bootstrap/js/bootstrap.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/jquery-3.7.1.min.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/modalsandpopover.js}"></script>
+<script th:if="${produtoRequest != null}"
+        type="text/javascript" th:src="@{/assets/js/calcula-total-produto.js}"></script>
 
 </body>
 </html>
